--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
   
 
   <link rel="icon" href="2pic.png" type="image/jpeg">
+  
+  <script>
+      // AUDIO SAMPLING RATE FIX
+      // Forces the browser to resample 48kHz mic input to the 44.1kHz the AI expects
+      (function() {
+          var originalAudioContext = window.AudioContext || window.webkitAudioContext;
+          if (originalAudioContext) {
+              window.AudioContext = function(options) {
+                  options = options || {};
+                  options.sampleRate = 44100; // Force 44.1kHz
+                  return new originalAudioContext(options);
+              };
+              window.AudioContext.prototype = originalAudioContext.prototype;
+              window.webkitAudioContext = window.AudioContext;
+          }
+      })();
+    </script>
+  
 
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.18.0/dist/tf.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/speech-commands@0.4.0/dist/speech-commands.min.js"></script>
