--- a/index.html
+++ b/index.html
@@ -10619,5 +10619,18 @@ function startAIDetection(videoElement) {
     detectFrame();
 }
 
+
+
+
+
+
+
+
+
+
+
+    </script>
+	
+
 </body>
 </html>
