--- a/Helen-Vision.html
+++ b/Helen-Vision.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>HELEN: ULTIMATE AI</title>
+    <title>HELEN: ULTIMATE AI OS</title>
     <style>
         body { margin:0; overflow:hidden; background:#000; font-family:'Courier New', monospace; }
         
