--- a/vr-cinema.html
+++ b/vr-cinema.html
@@ -103,7 +103,7 @@
         <a-light id="screen-glow" type="point" position="0 4 -4" distance="20" decay="2" intensity="0.5" color="#fff"></a-light>
 
         <a-curvedimage id="screen-cinema" src="#video-src" 
-            height="12" radius="14" theta-length="90" 
+            height="14" radius="16" theta-length="90" 
             rotation="0 135 0" position="0 5 0" 
             side="double" visible="true">
         </a-curvedimage>
@@ -111,7 +111,7 @@
         <a-entity id="screen-180" 
             geometry="primitive: sphere; radius: 60; phiLength: 180; segmentsWidth: 64; segmentsHeight: 32" 
             material="shader: flat; side: back; src: #video-src" 
-            rotation="0 270 0" scale="-1 1 1" 
+            rotation="0 240 0" scale="-1 1 1" 
             visible="false">
         </a-entity>
 
@@ -121,7 +121,7 @@
             visible="false">
         </a-videosphere>
 
-        <a-sphere id="menu-orb" position="0 -1.0 -1.5" radius="0.15" color="#ff9d00" 
+        <a-sphere id="menu-orb" position="0 -1.0 -1.5" radius="0.15" color="#804f00" 
                   visible="false" class="clickable"
                   animation="property: scale; dir: alternate; dur: 1500; to: 1.1 1.1 1.1; loop: true">
             <a-light type="point" distance="2" color="#ff9d00" intensity="2"></a-light>
@@ -591,3 +591,4 @@
     </script>
 </body>
 </html>
+
